fixed table for results overflow, fixed some warnings

--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -19,3 +19,7 @@ main
 
 .downloaderWrap
   padding: 5% 20%
+  @media screen and (max-width: 650px)
+    padding: 10% 10% 5% 10%
+  @media screen and (max-width: 400px)
+    padding: 10% 5%
