--- a/src/components/styles/results.module.sass
+++ b/src/components/styles/results.module.sass
@@ -1,30 +1,29 @@
-.resultBox
-    padding-bottom: 20px
-
-.tableResults
+.tableWrap
+    overflow-x: auto
     margin: 25px auto
-    overflow: auto
-    thead
-        font-weight: bold
-        td
-            padding: 5px
-            background-color: #00000015
-        .resultTime
-            margin: 0
-            font-size: 12px
-        .resultSTD
-            font-size: 10px
-    tbody
-        tr
-        td
-            padding: 5px
-            background-color: #0000000a
-            .resultTime
-                margin: 5px
-            .resultSTD
-                font-size: 12px
-        .techTitle
-            padding: 5px 10px
-            background-color: #00000015
+    .tableResults
+        margin: 0 auto
+        thead
             font-weight: bold
-            font-style: italic
+            td
+                padding: 5px
+                background-color: #00000015
+            .resultTime
+                margin: 0
+                font-size: 12px
+            .resultSTD
+                font-size: 10px
+        tbody
+            tr
+            td
+                padding: 5px
+                background-color: #0000000a
+                .resultTime
+                    margin: 5px
+                .resultSTD
+                    font-size: 12px
+            .techTitle
+                padding: 5px 10px
+                background-color: #00000015
+                font-weight: bold
+                font-style: italic
