--- a/src/components/styles/switch.module.sass
+++ b/src/components/styles/switch.module.sass
@@ -20,7 +20,7 @@
       text-align: center
       min-height: 100%
       color: rgba(0, 0, 0, 0.55)
-      background: rgba(255, 255, 255, 0.068)
+      background: rgba(78, 78, 78, 0.068)
       border-left: 1px solid rgba(255, 255, 255, 0.192)
       border-right: 1px solid rgba(255, 255, 255, 0.192)
       &:first-child
@@ -28,7 +28,7 @@
       &:last-child
         border-right: none
       &:hover
-        background: rgba(255, 255, 255, 0.192)
+        background: rgba(255, 255, 255, 0.103)
       .switchOptionContent
         .title, .titleSm
           display: block
@@ -69,16 +69,14 @@
       box-shadow: 0 9px 14px -4px rgba(0, 0, 0, 0.459)
       z-index: 1
       ul
-        position: absolute
-        left: 10%
-        bottom: 0
+        position: relative
+        margin: 25px 0
         padding: 0
         li
-          display: block
+          text-align: center
           text-transform: uppercase
           margin-top: 10px
           .switchOptionMobileContent
-            position: relative
             padding: 5px
             text-decoration: none
             span
@@ -92,7 +90,7 @@
 .active
   cursor: default !important
   color: rgba(0, 0, 0, 0.75) !important
-  background: rgba(255, 255, 255, 0.192) !important
+  background: rgba(255, 255, 255, 0) !important
 
 @keyframes shake
   0%
